# dbsg

./: .gitignore  BACKLOG.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  config_sample.yml  default_abbreviations.txt  setup.cfg  setup.py  setup_mypy.ini  setup_tox.ini  tox.ini
dbsg/: __init__.py  config.py  generator.py
dbsg/lib/: __init__.py  configuration.py  intermediate_representation.py  introspection.py  plugin.py
dbsg/plugins/: __init__.py  json_plugin.py  python3_7_plugin.py  raw_introspection_plugin.py
docs/source/: conf.py  index.rst
docs/source/plugins/: json.rst.rst  python3_7_plugin.rst
docs/source/reference/: configuration.rst  generator.rst  intermediate_representation.rst  introspection.rst  plugins.rst
tests/: conftest.py  test_configuration.py  test_intermediate_representation.py  test_introspection.py
