
[metadata]
name = db-stubs-generator

; Fetch the version from "dbsg.__init__.py#__version__" variable
version = attr: dbsg.__version__

; https://www.python.org/dev/peps/pep-0508/
platform = linux

description = DB stubs generator

; Make long description, concatenating README.md with CHANGELOG.md
long_description = file: README.md, CHANGELOG.md

long_description_content_type = text/markdown; charset=UTF-8

license = Apache License 2.0

license-file = LICENSE

author = Max Preobrazhensky
author_email = max.preobrazhensky@gmail.com

maintainer =
    Max Preobrazhensky <max.preobrazhensky@gmail.com>

; https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Topic :: Database
    Intended Audience :: Developers

project_urls =
    Source Code = https://github.com/jjj4x/dbsg


[options]
python_requires = '>=3.7'

zip_safe = False

include_package_data = True

; Find packages, using setuptools.find_packages()
packages = find:

install_requires =
    cx_Oracle < 7
    marshmallow < 3
    pyyaml < 6

test_requirements =
    pytest


[options.packages.find]
where = dbsg


[options.entry_points]
console_scripts =
    generate = dbsg.generator:main
